# RandomNumberGenerator

./: .gitignore  CMakeLists.txt  CPU_Capabilities  CPU_Capabilities.cpp  CPU_Capabilities.exp  CPU_Capabilities.lib  CPU_Capabilities_debug  CPU_Capabilities_debug.exp  CPU_Capabilities_debug.lib  README.md  rd_functions.c  rd_functions.exp  rd_functions.h  rd_functions.lib  rd_functions.py  rd_functions_debug.exp  rd_functions_debug.ilk  rd_functions_debug.lib  rd_tests.cpp
